--- a/index.html
+++ b/index.html
@@ -16,13 +16,23 @@
 
     <div class="gameContainer">
         <div class="container">
-            <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
+            <div class="box bt-0 bl-0" style="padding-bottom: 60px;padding-top: 111px;padding-right: 18px;padding-left: 18px;"><span class="boxtext"></span></div>
             <div class="box bt-0"><span class="boxtext"></span></div>
             <div class="box bt-0 br-0"><span class="boxtext"></span></div>
-            <div class="box bl-0"><span class="boxtext"></span></div>
+            <div class="box bl-0" style="
+    padding-top: 110px;
+    padding-right: 18px;
+    padding-bottom: 60px;
+    padding-left: 18px;"><span class="boxtext"></span></div>
             <div class="box"><span class="boxtext"></span></div>
             <div class="box br-0"><span class="boxtext"></span></div>
-            <div class="box bb-0 bl-0"><span class="boxtext"></span></div>
+            <div class="box bb-0 bl-0" style="
+    padding-top: 111px;
+    padding-right: 18px;
+    padding-bottom: 60px;
+    padding-left: 18px;
+    border-left-width: 212px;
+"><span class="boxtext"></span></div>
             <div class="box bb-0"><span class="boxtext"></span></div>
             <div class="box bb-0 br-0"><span class="boxtext"></span></div>
         </div>
